# dual_iiwa

./: README.md
dual_iiwa_bringup/: CMakeLists.txt  package.xml
dual_iiwa_bringup/launch/: iiwa_ur_bringup.launch
dual_iiwa_description/: CMakeLists.txt  package.xml
dual_iiwa_description/launch/: display.launch  dual_iiwa.rviz  dual_iiwa_upload.launch
dual_iiwa_description/urdf/: dual_iiwa.urdf  dual_iiwa.urdf.xacro  dual_iiwa_pedestal.urdf  dual_iiwa_pedestal.urdf.xacro  iiwa14.xacro  iiwa7.xacro
dual_iiwa_moveit_config/: .setup_assistant  package.xml
dual_iiwa_moveit_config/config/: EffortJointInterface_controllers.yaml  PositionJointInterface_controllers.yaml  VelocityJointInterface_controllers.yaml  dual_iiwa_pedestal.srdf  fake_controllers.yaml  gazebo_dual_iiwa.urdf  joint_limits.yaml  kinematics.yaml  stomp_planning.yaml
dual_iiwa_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  dual_iiwa_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
